--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "lottie-web": "^5.13.0",
+        "ngx-lottie": "^20.0.0"
     }
 }
