--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "lottie-web": "^5.13.0",
-        "ngx-lottie": "^20.0.0"
+        "ngx-lottie": "^20.0.0",
+        "qrcode": "^1.5.4"
     }
 }
