--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+# Restringe el acceso por dominio (solo se aplica cuando APP_ENV=production)
+# Separado por comas.
+APP_ALLOWED_HOSTS=ifasoruro.edu.bo,www.ifasoruro.edu.bo
 APP_TIMEZONE=America/La_Paz
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
